<resources>
    <string name="app_name">TaskManagement</string>

    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="or">Hoặc</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">Người dùng mới? Đăng ký ngay</string>
    <string name="OK">Đồng ý</string>
    <string name="rooted">Thiết bị đã root, không thể sử dụng được ứng dụng này</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="onProcess">Đang xử lý....</string>

    <!--    Task    -->
    <string name="delete_confirmation">Xác nhận</string>
    <string name="notice_confirmation">Để lại lời nhắn</string>
    <string name="sureToDelete">Bạn chắc chắn muốn xóa ?</string>
    <string name="yes">Đồng ý</string>
    <string name="send">Gửi</string>
    <string name="no">Không</string>
    <string name="confirmation">Công việc hoàn thành !</string>
    <string name="secureconfirmation">Bảo mật thông tin!</string>
    <string name="addtask">Đơn thêm công việc</string>
    <string name="updatetask">Đơn sửa công việc</string>
    <string name="add">Thêm</string>
    <string name="addtitle">Điền chi tiết công việc của bạn theo đơn</string>
    <string name="tasks">Danh sách công việc</string>
    <string name="tasktitle">Tiêu đề</string>
    <string name="taskdesc">Mô tả</string>
    <string name="taskdate">Ngày kết thúc</string>
    <string name="tasktime">Giờ kết thúc</string>
    <string name="taskpriority">Độ ưu tiên</string>
    <string name="taskassign">Giao cho</string>
    <string name="taskstatus">Trạng thái</string>
    <string name="sureToMarkAsComplete">Bạn muốn đánh dấu công việc này là hoàn thành ?</string>
    <string name="congrats_you_have_completed_the_task_successfully">Chúc mừng! Bạn đã hoàn thành công việc</string>
    <string name="notcreate">Bạn chưa tạo công việc!!</string>
    <string name="notcreategroup">Bạn chưa tạo nhóm!!</string>
    <string name="notcreateassign">Bạn chưa giao việc!!</string>
    <string name="notcreateassignmytask">Bạn không có việc nhóm!!</string>
    <string name="grouptitle">Danh sách nhóm</string>
    <string name="assigntitle">Danh sách công việc tôi giao</string>
    <string name="mytasktitle">Danh sách công việc nhóm</string>
    <string-array name="taskstatusarr">
        <item>TODO</item>
        <item>DOING</item>
        <item>COMPLETED</item>
    </string-array>
    <string-array name="taskprioarr">
        <item>LOWEST</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>
    <string name="invitetitle">Bạn có lời mời tham gia nhóm</string>
    <string name="memberquantity">Số thành viên: </string>
    <!--    Category-->
    <string name="title">Danh mục</string>
    <string name="cate_name">Tên danh mục</string>
    <string name="create">Tạo</string>
    <string name="edit">Cập nhật</string>
    <string name="click_tag">clicktag</string>
    <!-- Main tab name    -->
    <string-array name="mainTab">
        <item>Công việc của tôi</item>
        <item>Công việc tôi giao</item>
        <item>Biểu đồ</item>
    </string-array>
    <string name="personal">Cá nhân</string>
    <string name="group">Nhóm</string>
    <string name="chart">Biểu đồ</string>
    <string name="settingtab">Cấu hình</string>
    <!-- Chart -->
    <string name="chart_personal_title">Thống kê công việc cá nhân</string>
    <string name="chart_group_title">Thống kê công việc nhóm</string>
    <!--    Setting-->
    <string name="on">Bật</string>
    <string name="off">Tắt</string>
    <string name="indate">Đúng ngày</string>
    <string name="before3Day">3 ngày</string>
    <string name="before7Day">7 ngày</string>
    <string name="profile">Thông tin</string>
    <string name="info">Info</string>
    <string name="invite">Lời mời</string>
    <string name="about_me">Cá nhân</string>
    <string name="stedit">Sửa</string>
    <string name="contact">Liên hệ</string>
    <string name="setting">Nhắc việc</string>
    <string name="security">Bảo mật</string>
    <string name="changepass">Đôi mật khẩu</string>
    <string name="logout">Đăng xuất</string>
    <!--    Dialog-->
    <string name="select">Chọn</string>
    <string name="cancel">Hủy</string>
    <string name="otp_title">Xác thực OTP</string>
    <string name="otp_sub_title">Chúng tôi đã gửi mã đến sđt:</string>
    <string name="otp_resend">Gửi lại mã</string>
    <string name="otp_verify">Xác thực</string>
    <string name="check_version">Thiết bị của bạn không hỗ trợ chức năng này</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- fingerprint    -->
    <string name="sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="enable">Kích hoạt</string>
    <string name="biometric_title">Xác thực</string>
    <string name="biometric_subtitle">Bạn cần xác thực để thực hiện tác vụ này</string>
    <string name="biometric_description">Đặt ngón tay vào cảm biến để nhận dạng</string>
    <string name="biometric_negative_button_text">HỦY</string>
    <string name="biometric_failed">Không nhận dạng được vân tay</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="use_password">Use password</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="biometric_error_sdk_not_supported">Phiên bản SDK không hỗ trợ</string>
    <string name="biometric_error_hardware_not_supported">Thiết bị không hỗ trợ sinh trắc học</string>
    <string name="biometric_error_fingerprint_not_available">Thiết bị chưa đăng ký vân tay</string>
    <string name="biometric_error_permission_not_granted">Người dùng chưa cấp quyền</string>
    <string name="biometric_failure">Xác thực không thành công</string>
    <string name="biometric_cancelled">Người dùng hủy xác thực</string>
    <string name="biometric_success">Login Successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="prompt_title">Kích hoạt xác thực vân tay</string>
    <string name="prompt_message">Sử dụng xác thực vân tay để đăng nhập.\n Bạn có thể tự thiết lập ở Settings</string>

</resources>