<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_add_black_24dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/addtask"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/addtitle"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:textSize="18sp" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tasktitle" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/addTaskTitle" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/taskdesc" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/addTaskDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="30dp"
            android:text="@string/taskdate" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/taskDate" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tasktime" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/taskTime" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/taskassign" />

        <com.kma.taskmanagement.ui.common.CustomSpinner
            android:id="@+id/spinnerAssign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_spinner"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:popupBackground="@drawable/blue_outline_white_background"
            android:overlapAnchor="false"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/taskpriority" />

        <com.kma.taskmanagement.ui.common.CustomSpinner
            android:id="@+id/spinnerPrio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_spinner"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:popupBackground="@drawable/blue_outline_white_background"
            android:overlapAnchor="false"
            android:spinnerMode="dropdown" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addTask"
            android:text="@string/add"
            android:background="@drawable/btn_background"
            android:textColor="@color/white"
            android:layout_marginTop="40dp" />

    </LinearLayout>
</ScrollView>