<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingRight="@dimen/dp20"
    android:paddingLeft="@dimen/dp20"
    android:orientation="vertical"
    android:background="#fff"
    android:id="@+id/linearLayout"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/tvGroupTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/grouptitle"
        android:textColor="@color/COLOR_BUTTON"
        android:textSize="@dimen/sp21"
        android:layout_marginBottom="@dimen/dp15"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <FrameLayout
            android:id="@+id/root_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/llAnimation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="visible">
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    app:lottie_rawRes="@raw/group_gears"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notcreategroup"
                    android:textAlignment="center"
                    android:textStyle="bold"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/groupTaskRecycler"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/add"
            android:drawablePadding="10dp"
            android:paddingTop="10dp"
            android:id="@+id/addGroupTask"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_add_black_24dp"
            android:textAlignment="center"
            android:layout_weight="0.5"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</LinearLayout>